css/style.css
@import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
@import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');

:root {
    --color-interface-areas: rgb(0, 34, 55);
}
*, 
*::before, 
*::after {
    margin: 0;
    padding: 0;
}
body { 
    display: block;
    text-align: center;
    font-size: 24px;
    font-family: 'Righteous', cursive;
    background-color: lightcyan;
}
/* #header {
    margin-top: 32px;
} */
#wrapper {
    position: relative;
    margin: 64px auto;
    height: 908px;
    width: 1216px;
    font-family: 'VT323', monospace;
    overflow: hidden
}

#screen-start {
    display: ; /* TEMP: */
    position: absolute;
    top: 0;
    left: 0;
    height: 908px;
    width: 1216px;
    background-color: lightblue;
    z-index: 6; 
    /* background: url(/GA-Proj1-Dungeon-fighter/imgs/DF-StartScreen.png);
    background-repeat: no-repeat;
    background-size: contain; */
}
#game-title {
    margin-top: 200px;
    font-size: 120px;
}
#game-tagline {
    margin: 20px auto;
    margin-bottom: 100px;
    font-size: 50px;
    max-width: 800px;
}


/*====         Screens         ====*/
#screen-win {
    display: ;
    position: absolute;
    top: 0;
    right: 0;
    height: 1008px;
    width: 1216px;
    color: white;
    font-size: 42px;
    background-color: rgb(224, 219, 122);
    z-index: 0;
}

#screen-win * {
    display: flex;
    justify-content: center;
    margin-top: 20%;
}

#screen-lose {
    display: ;
    position: absolute;
    top: 0;
    right: 0;
    height: 1008px;
    width: 1216px;
    color: white;
    font-size: 42px;
    background-color: rgb(32, 88, 132);
    z-index: 0;
}

#screen-lose * {
    display: flex;
    justify-content: center;
    margin-top: 20%;
}


#screen-fight {
    display: ;
    position: absolute;
    top: 0; 
    left: 1216px;
    /* left: 0; TEMP: */
    height: 908px;
    width: 1216px; 
    background: url(../imgs/screen/fightscreen.jpg);
    background-position:center;
    background-repeat: no-repeat;
    background-size: contain;
    background-color: grey;
    z-index: 6;
}
#topBar,
#botBar {
    position: absolute;
    width: 100%;
    height: 150px;
    background-color: black;
    z-index: 7;
}

#botBar {
    bottom: 0;
    right: 0;
}

#game {
    position: absolute;
    top: 0;
    right: 0;
    background: url(../imgs/DF-Cave.jpg);
    background-position:center ;
    background-repeat: no-repeat;
    background-size: contain;
    background-color: black;
    z-index: 1;
}


#game-info {
    position: absolute;
    top: 12.5px;
    right: 12.5px;
    height: 125px;
    width: 1191px;
    background-color: var(--color-interface-areas);
    opacity: 0;
    z-index: 8;
}
#game-info p {
    position: absolute;
    top: 17.5px;
    Left: 25px;
    color: white;
    font-size: 28px;
}


/* ======== Player - Enemy Health-bars ======== */
#health-outline,
#health-fill {
    position: absolute;
    height: 25px;
    width: 200px;
} 
#health-outline{
    top: 50px;
    Left: 25px;
    border: 2px solid white;
    background-color: black;
}
#health-fill {
    background-color: red;
}

#enemy-info {
    position: absolute;
    top: 700px;
    right: 600px;
}
#fight-enemyName {
    position: absolute;
    color: white;
}
#fight-enemyHealth-outline,
#fight-enemyHealth-fill {
    position: absolute;
    height: 15px;
    width: 200px;
}
#fight-enemyHealth-outline {
    top: 2px;
    Left: 110px;
    border: 2px solid white;
    background-color: black;
}
#fight-enemyHealth-fill {
    background-color: red;
}


#game-inventory {
    display: flex;
    position: absolute;
    bottom: 12.5px;
    right: 12.5px;
    height: 125px;
    width: 589.25px;
    background-color: var(--color-interface-areas);
    opacity: 0;
    z-index: 8;
}
.inventory-header {
    position: absolute;
    top: 0;
    color: white;
}
.inventory-slot,
#item-area {
    display: flex;
    top: 25px;
    left: 12.5px;
    margin-top: 25px;
    margin-left: 25px;
    height: 90px;
    width: 90px;
    border: 3px solid black;
    box-shadow: inset 0 0 20px 5px rgba(0,0,0,0.6);
    background-color: rgb(255, 255, 255);    
}
#item-area {
    width: 294.25px;
    align-items: center;
    justify-content: space-evenly;

}

.inventory-item {
    height: 60px;
    width: 60px;
    border-radius: 40%;
    background-color: rgba(59, 135, 216, 0.102);
}

#fight-btns {
    display: flex;
    position: absolute;
    bottom: 12.5px;
    left: 12.5px;
    height: 125px;
    width: 589.25px;
    user-select: none;
    background-color: var(--color-interface-areas);
    opacity: 0;
    z-index: 8;
}

.fight-btn{
    display: flex;
    justify-content: center;
    align-items: center;
    margin-top: 25px;
    margin-left: 25px;
    padding: auto;
    width: 150px;
    height: 75px;
    color: white;
    font-family: 'VT323', monospace;
    font-size: 48px;
    border: 4px solid rgb(255, 255, 255);
    background-color: rgb(23, 120, 152);
    z-index: 8;
}
.active-btn:hover{
    border: 8px solid rgb(8, 44, 152);
}

.inactive-btn{
    border: 4px solid rgb(255, 255, 255);
    background: grey;
}


.startScreen-btn {
    display: block;
    margin: 20px auto;
    padding: 10px 20px;
    width: 200px;
    text-align: center;
    font-family: 'VT323', monospace;
    font-size: 24px;
    color: white;
    border: none;
    background-color: rgb(25, 119, 159);
    transition: background-color ease-in-out 500ms;
}

.startScreen-btn:hover {
    background-color: rgb(60, 191, 230);
}
#instructions-btn {
    height: 100px;
}

#instructions {
    display: none;
    position: absolute;
    top: 152px;
    left: 306px;
    height: 596px;
    width: 596px;
    border: 4px solid rgb(237, 232, 232);
    border-radius: 10px;
    background-color: rgba(15, 60, 120, 0.966);
    user-select: none;
}
#instructions-close {
    display: flex;
    position: absolute;
    align-items: center;
    justify-content: center;
    top: 4px;
    right: 4px;
    width: 30px;
    height: 30px;
    color: rgb(237, 232, 232);
    font-size: 32px;
    border: 2px solid rgb(237, 232, 232);
    border-radius: 10px;
    box-shadow: inset 0 0 3px 1px rgba(0,0,0,0.6);
    background-color: rgb(218, 27, 27);
    user-select: none;
    transition: background-color ease-in-out 100ms;
}

#instructions-close:hover {
    background-color: rgb(157, 13, 13);
}
#instructions h2 {
    margin-top: 20px;
    margin-bottom: 10px;
    color: rgb(237, 232, 232);
}
#instructions p {
    margin: 0 30px;
    color: rgb(237, 232, 232);
    text-align: left;
}
#instructions h3 {
    color: rgb(237, 232, 232);
}

span#teal {
    color: rgb(26, 119, 110);
}
span#orange {
    color: orange;
}
span#green {
    color: rgb(30, 151, 50);
}
span#red {
    color: rgb(255, 0, 0);
}
span#yellow {
    color: rgb(229, 242, 50);
}

